tests/cancelable_parallelizable_workloads/cancelable_parallelizable_workloads.exp


Commands can be canceled


Server starts off checking nothing
No errors!

The Flow server is currently in filesystem lazy mode and is only checking 0/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes


check-contents triggers a recheck due to unchecked dependency:
Error -------------------------------------------------------------------------------------------------- focused.js:5:17

Cannot assign `val` to `x` because number [1] is incompatible with string [2].

   focused.js:5:17
   5| var x: string = val;
                      ^^^

References:
   dependency.js:3:16
   3| export default 123;
                     ^^^ [1]
   focused.js:5:8
   5| var x: string = val;
             ^^^^^^ [2]



Found 1 error


Trigger a 1000s recheck


Prove we're running in parallel by running a command:
Error -------------------------------------------------------------------------------------------------- focused.js:5:17

Cannot assign `val` to `x` because number [1] is incompatible with string [2].

   focused.js:5:17
   5| var x: string = val;
                      ^^^

References:
   dependency.js:3:16
   3| export default 123;
                     ^^^ [1]
   focused.js:5:8
   5| var x: string = val;
             ^^^^^^ [2]



Found 1 error


Stop the stuck recheck
